--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <!-- Insert your assignment content inside this block either as images using the img tag or embedding a PDF using iframe tag -->
                 
                 <iframe class="pdf" src="pou.final_compressed.pdf"></iframe><br><br><br>
-                <iframe class="pdf" src="file:///C:/Users/diyab/Downloads/srishti/first%20year/GSK/S2_MarkMaking/a3.pdf"></iframe>
+                <iframe class="pdf" src="a3.pdf"></iframe>
             </div>
         </div>
         
