--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="media">
                 <!-- Insert your assignment content inside this block either as images using the img tag or embedding a PDF using iframe tag -->
                 <!-- or --> <br>
-                <iframe class="pdf" src="file:///C:/Users/diyab/Downloads/Human%20Machine%20Interaction.pdf" height="100"></iframe>
+                <iframe class="pdf" src="Human Machine Interaction.pdf" height="100"></iframe>
             </div>
         </div>
 
