--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2>A1 Tasks</h2>
         <div class="assignment-block" id="D1E1">
             <h3>D1E1 - Introductions / Show & Tell</h3>
-            <p>I'm Diya.</p>
+            <p>Hi, I’m Diya. I’m 19 years old and from Kerala, though I was born and raised in Bangalore. I’m passionate about sketching and playing badminton. I usually work with colour pencils and graphite but recently developed an interest in animation and digital art. I enjoy creating small, cute comics.</p>
             <div class="media">
                 <!-- Insert your assignment content inside this block either as images using the img tag or embedding a PDF using iframe tag -->
                 
