--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <h2>A1 Tasks</h2>
         <div class="assignment-block" id="D1E1">
             <h3>D1E1 - Introductions / Show & Tell</h3>
-            <p>Hi, I’m Diya. I’m 19 years old, originally from Kerala but born and raised in Bangalore. I’m passionate about sketching and playing badminton. I usually work with colored pencils and graphite but have recently developed an interest in animation and digital art. I enjoy creating small, cute comics. 
-Below are two of my projects: one is a website for an NGO, which I developed for my summative assessment, and the other is a project from one of my classes.</p>
+            <p>Hi, I’m Diya. I’m 19 years old, originally from Kerala but born and raised in Bangalore. I’m passionate about sketching and playing badminton. I usually work with colored pencils and graphite but have recently developed an interest in animation and digital art. I enjoy creating small, cute comics.<br> 
+Below are two of my projects: one is a website for an NGO, which I developed for my summative assessment, and the other is a project from one of my classes.</p><br>
             <div class="media">
                 <!-- Insert your assignment content inside this block either as images using the img tag or embedding a PDF using iframe tag -->
                 
