--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Insert Title of your Webpage here. For eg: IXD1 - Firstname Lastname -->
-    <title>Webpage Title</title>
+    <title>Diya Bijoy Interaction Design Documentation</title>
     
     <!-- Insert Title of your Webpage in content. For eg: IXD1 - Firstname Lastname -->
     <meta property="og:title" content="Page Title"/>
