--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@ Below are two of my projects: one is a website for an NGO, which I developed for
                 <!-- or --> <br>
                 <iframe class="pdf" src="Human Machine Interaction.pdf" height="100"></iframe>
             </div>
+        <div class="assignment-block" id="D3E1">
+            <h3>D1E2 - Examples of Principles of Design</h3>
+            <p>For assignment two, we were given the task of finding examples of principles of Design.</p>
+            <div class="media">
+                <!-- Insert your assignment content inside this block either as images using the img tag or embedding a PDF using iframe tag -->
+                <!-- or --> <br>
+                <iframe class="pdf" src="Principles of interaction presentation.pdf" height="100"></iframe>
+            </div>
         </div>
 
         <!-- Repeat div with the class assignment-block for exercises in A1. Change the ids accordingly -->
