--- a/index.html
+++ b/index.html
@@ -108,11 +108,16 @@ Below are two of my projects: one is a website for an NGO, which I developed for
     <!-- Assignment section for A2 -->
     <section class="assignment" id="A2">
         <h2>A2</h2>
+	    <div class="assignment-block" id="A2">
 	     <p>We were assigned to redesign the interface for "Transactions". Below is a video of the research and history of transactions, as well as a proposal of what we would be doing for A3.</p><br>
             <div class="media">
                 <!-- Insert your assignment content inside this block either as images using the img tag or embedding a PDF using iframe tag -->
-                
+                <div class="media">
                 <iframe class="mp4" src="A2_InteractionDesign.mp4"></iframe><br><br><br>
+		<iframe class="pdf" src="A2_Proposal.pdf"></iframe><br><br><br>
+		</div>
+	    </div>
+
     </section>
 
     <!-- Assignment section for A3 -->
