--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Below are two of my projects: one is a website for an NGO, which I developed for
                 <!-- Insert your assignment content inside this block either as images using the img tag or embedding a PDF using iframe tag -->
                 <div class="media">
                 <iframe class="mp4" src="A2_InteractionDesign.mp4"></iframe><br><br><br>
-		<iframe class="pdf" src="A2_Proposal.pdf"></iframe><br><br><br>
+		<iframe class="pdf" src="A2_Concept Note.pdf"></iframe><br><br><br>
 		</div>
 	    </div>
 
