--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ Below are two of my projects: one is a website for an NGO, which I developed for
                 <!-- or --> <br>
                 <iframe class="pdf" src="Human Machine Interaction.pdf" height="100"></iframe>
             </div>
+	</div>
         <div class="assignment-block" id="D3E1">
             <h3>D3E1 - Examples of Principles of Design</h3>
             <p>For assignment two, we were given the task of finding examples of principles of Design.</p>
