--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@ Below are two of my projects: one is a website for an NGO, which I developed for
     <!-- Assignment section for A3 -->
     <section class="assignment" id="A3">
         <h2>A3</h2>
+	    <div class="assignment-block" id="A2">
+	     <p>We created a stop motion film explaning our concept as well as an informative poster.</p><br>
+            <div class="media">
+                <!-- Insert your assignment content inside this block either as images using the img tag or embedding a PDF using iframe tag -->
+                <div class="media">
+                <iframe class="mp4" src="A2_InteractionDesign.mp4"></iframe><br><br><br>
+		<iframe class="jpg" src="LuminaPoster[Kalyani&Swetha&Diya].jpg"></iframe><br><br><br>
+		</div>
+	    </div>
 
     </section>
 
